@@ -1,0 +1,7 @@
+main:
+    jsl retry_in_level_main
+    rtl
+
+nmi:
+    jsl retry_nmi_level
+    rtl
