@@ -6,6 +6,8 @@ A: Inserting this patch should be relatively simple in most cases.
 - Copy this inside UberASM Tool's "list.txt", under "gamemode:":
 
     03 retry_gm03.asm
+    06 retry_gm06.asm
+    07 retry_gm07.asm
     0C retry_gm0C.asm
     0D retry_gm0D.asm
     0F retry_gm0F.asm
