@@ -3,6 +3,10 @@ v0.5.2:
     - Added an "api" file containing useful routines that can be called by external UberASM files (sadly not from other library files if using standard UberASMTool). For now it only has two, one to reset the current level's checkpoint, and one to reset all checkpoints, but more can be added in the future. For information on how to use them see "docs/api.html".
     - Fixed Retry prompt remaining glitched on screen in case Mario revives after death (for example, Yoshi revive glitch).
     - Added !draw_all_dc_collected option to make all DCs collected be drawn or not to Retry's sprite status bar.
+    - Now enabling the sprite status bar on the title screen will work properly instead of showing glitched tiles. Note that it is still disabled by default in "sprite_status_bar_tables.asm": values are $0000 for level C7, changing those according to the guide in the file will enable it.
+      NOTE: this requires inserting the new "retry_gm06.asm" gamemode file in GM 06 (see updated "how_to_insert.txt" guide).
+    - Added fix for dying on the title screen with the !title_death_behavior option, with which you can choose if to reload the title screen immediately or only after the death animation has played out. You can also keep the original game's glitched behavior if you need to.
+      NOTE: this requires inserting the new "retry_gm07.asm" gamemode file in GM 07 (see updated "how_to_insert.txt" guide).
 
 v0.5.1:
     - Improved speed of Retry prompt drawing.
